[package]
name = "log_experiments"
version = "0.0.0"
authors = ["Denis Otkidach <denis.otkidach@gmail.com>"]
edition = "2018"

[lib]
name = "logging"
path = "src/logging.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hostname = "0"
log = ""
log-panics = "2"
sentry = { version = "0", default-features = false, features = ["backtrace", "contexts", "transport"] }
sentry-slog = "0"
slog = "2"
slog-async = "2"
slog-envlogger = "2"
slog-gelf = "0"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"

[build-dependencies]
git-version = "0"
regex = "1"
